--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "banner-card",
+  "name": "banner-card-edited",
   "version": "0.13.0",
   "main": "index.js",
   "author": "Raymond Julin <raymond.julin@gmail.com>",
